# Jenkins-practical-tasks-colud

./: Jenkinsfile  README.md  pyproject.toml  requirements.txt
app/: __init__.py  routes.py
docker/: .dockerignore  Dockerfile  docker-compose.yml
tests/: conftest.py  test_integration.py  test_unit_routes.py
