[project]
name = "jenkins-practical-tasks"
version = "0.1.0"
description = ""
authors = [
    {name = "sszewczyk",email = "sszewczyk@griddynamics.com"}
]
readme = "README.md"
requires-python = "3.12.9"
dependencies = [
    "flask (>=3.1.1,<4.0.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
